VDR Plugin 'markad' Revision History
----------------------------------

xxxx-xx-xx: Version 2.0.2
- some minor bug fixes and optimizations, see git
- make option "extract logos" available in the VDR menue
- pay attention of --threads in cDecoder

2020-04-18: Version 2.0.1
- some minor bug fixes and optimizations, see git

2020-04-12: Version 2.0.0
- beta version of the new features:
- add feature cut video based on marks
- add feature AC3 reencode
- add feature auto logo extraction

2020-04-18: Version 1.0.5
- some minor bug fixes and optimizations, see git

2020-04-12: Version 1.0.4
- some minor bug fixes and optimizations, see git

2020-04-07: Version 1.0.3
- some minor bug fixes, see git

2020-03-21: Version 1.0.2
- fix audio channel detection for Ubuntu 20.04
- some minor bug fixes, see git

2020-03-16: Version 1.0.1
- fix Debian and Rasbian compile problems
- some minor bug fixes, see git

2020-02-20: Version 1.0.0
- introduce alternative decoder

2012-09-14: Version 0.1.4

- Improved PATPMT seeker
- ReelVDR support (info.txt)
- Added manual page (contributed by marco)
- Fixed "internal structures" bug

2012-03-01: Version 0.1.3

- Changed H264 stream frame/field processing
- Added support for ffmpeg >= 0.8
- Disabled pre-/post timer on live recordings
- Fixed a bug in the PAT/PMT seekder

2011-04-03: Version 0.1.2

- Fixed another bug in handling ts files ("demux error")
- Limited logo extraction to 1000 frames
- Added more finnish logos
- Added czech translation

2011-03-20: Version 0.1.1

- Fixed bug in handling ts files ("demux error")
- Fixed output of marks on channels without logos
- Added finnish logos and translation from Rolf Ahrensberg
- Added spanish translation from Javier Bradineras
- Added more informations in markad logfile

2011-02-23: Version 0.1.0

- New demuxer
- New mark handling
- Removed "Backupmarks" option
- Added more logos
- Fixed some bugs reported from users

2011-02-13: Version 0.0.9
